--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<img src="images/town_hall_logo.gif" alt="town hall logo gif" style="height:80px;">
+	<img src="town_hall_logo.gif" alt="town hall logo gif" style="height:80px;">
 	<meta charset="utf-8">
 	<title>San Joaquin Valley Town Hall</title>
 	<link rel="shortcut icon" href="favicon.ico">
@@ -33,16 +33,16 @@
 		<h1>This season's guest speakers</h1>
 
 		October<br>
-		<a href="speakers/toobin.html">Jeffrey Toobin<br></a>
-		<img src="images/toobin75.jpg" height="75" alt="Picture of Jeffrey Toobin"><br><br>
+		<a href="toobin.html">Jeffrey Toobin<br></a>
+		<img src="toobin75.jpg" height="75" alt="Picture of Jeffrey Toobin"><br><br>
 
 		November<br>
-		<a href="speakers/sorkin.html"> Andrew Ross Sorkin<br></a>
-		<img src="images/sorkin75.jpg" height="75" alt="Picture of Andrew Sorkin"><br><br>
+		<a href="sorkin.html"> Andrew Ross Sorkin<br></a>
+		<img src="sorkin75.jpg" height="75" alt="Picture of Andrew Sorkin"><br><br>
 
 		January<br>
-		<a href="speakers/chua.html">Amy Chua<br></a>
-		<img src="images/chua75.jpg" height="75" alt="Picture of Amy Chua"><br><br>
+		<a href="chua.html">Amy Chua<br></a>
+		<img src="chua75.jpg" height="75" alt="Picture of Amy Chua"><br><br>
 
 	</main>
 	<footer>
